# nbis4j

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
pom/: nbis4j-0.1.pom
src/main/cpp/: CMakeLists.txt
src/main/cpp/src/: nbis4j_nfiq.c  nbis4j_nfiq.h  nbis4j_wsqc.c  nbis4j_wsqc.h
src/main/java/io/github/nbis4j/: Bitmap.java  ImageFormat.java  NBISException.java  NFIQ.java  NFIQComputeException.java  Utils.java  WSQCodec.java
src/test/java/io/github/nbis4j/test/: NFIQ4jTest.java  NFIQTest.java  WSQCodecTest.java
